2009-09-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* delay/init.c, ratemon1/init.c: Clean up configuration.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add timer test.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* complex1/.main.cc.swp: Removed.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog: New file.
